--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="//s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.0.1/css/calcite-web-dark.min.css">
-    <link rel="stylesheet" href="//js.arcgis.com/4.7/esri/themes/dark/main.css">
+    <link rel="stylesheet" href="//s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.2.5/css/calcite-web-dark.min.css">
+    <link rel="stylesheet" href="//js.arcgis.com/4.12/esri/themes/dark/main.css">
     <link rel="stylesheet" href="./css/boilerplate.css">
     <!--<link rel="stylesheet" href="./css/slider.css">-->
     <script type="text/javascript" src="./js/dojoConfig.js"></script>
-    <script type="text/javascript" src="//js.arcgis.com/4.7/"></script>
+    <script type="text/javascript" src="//js.arcgis.com/4.12/"></script>
     <script type="text/javascript">
       require([
         "boilerplate",
